# BoilerplatePython

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
boilerplatepython/: __init__.py  __main__.py  conf.py  logging.py
docs/: conf.py  index.rst  install.rst
tests/integration_tests/: test_version_help.py
tests/unit_tests/: test_logging.py  test_main.py  test_main_wide_help_formatter.py  utils.py
tests/unit_tests/test_logging/: conftest.py  test_log_formatter.py  test_setup_logging.py
tests/unit_tests/test_main/: test_cli.py  test_exit_signaling.py  test_wide_help_formatter.py
